# oom-free-alpamayo

./: .gitignore  LICENSE  NOTICE  README.md  env.example  pyproject.toml  run.sh  test_inference.py
alpamayo_memopt/: __init__.py  alpamayo15.py  config.py  gpu.py  hook.py  predictor.py  profiler.py  setup.py
alpamayo_memopt/models/: __init__.py  base.py  r1.py  r15.py
scripts/: infer.py  profile.py
